--- a/ui/site/css/_dailyFeed.scss
+++ b/ui/site/css/_dailyFeed.scss
@@ -31,6 +31,10 @@ $c-contours: mix($c-brag, $c-shade, 80%);
       border-radius: 50%;
       color: #fff;
     }
+    > i::before {
+      position: relative;
+      top: -2px;
+    }
     &__flair {
       float: $start-direction;
       width: 54px;
